deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 1 
  template: 
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: santoshgoru/hello-world:v2
        ports:
        - containerPort: 80
