service.yaml
apiVersion: v1
kind: Service
metadata:
 name: helloworld
spec:
 ports:
  - port: 80
    targetPort: 80
    protocol: TCP
 selector:
   app: helloworld
